terraform/securitygroups.tf

resource "aws_security_group" "cp2-sp" {
  name = "cp2-sp"
  tags {
        Name = "cp2-sp"
  }
  vpc_id = "${aws_vpc.cp2-network.id}"

  ingress {
        from_port = 80
        to_port = 80
        protocol = "TCP"
        cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = "22"
    to_port     = "22"
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
